# final_bot_x

./: .env  .gitignore  Cargo.toml  README.md  example-env
src/: interaction_handler.rs  main.rs  message_handler.rs  reaction_handler.rs  slash_commands.rs
src/slash_commands/: get_latest_tweet.rs  post_tweet.rs  process_token.rs  send_tweet_commands.rs
web_scraper/: package-lock.json  package.json  script.js
