[package]
name = "FinalBotX"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
serenity = { version = "0.12.0", features = ["client", "gateway", "model", "rustls_backend"] }
dotenv = "0.15.0"