[package]
name = "final_bot_x"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.14.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1"
twilight-cache-inmemory = "0.15.4"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-interactions = "0.15.2"
twilight-model = "0.15.4"
twilight-util = { version = "0.15.2", features = ["builder"] }
tracing = "0.1.30"
dotenv = "0.15.0"
vesper = "0.11.0"