[package]
name = "final_bot_x"
version = "0.5.0"
edition = "2021"

[dependencies]
tokio = { version = "1.14.0", features = ["rt", "rt-multi-thread", "macros", "process"] }
serenity = "0.12.0"
serenity-commands = "0.4.3"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs2 = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4.0"


